# lolche_bot_rust

./: .gitignore  Cargo.toml
src/: main.rs
src/bot/: bot.rs  mod.rs  traits.rs
src/config/: conf.rs  config.yaml
src/crawl/: crawl.rs  error.rs  mod.rs
src/db/: db.rs
src/mode/: mod.rs
src/telebot/: bot.rs
