[package]
name = "lolche_bot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
mysql = "25.0.1"
mysql_async = "0.34.2"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
scraper = "0.22.0"
sugar = "0.2.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1", features = ["full", "macros"] }
pretty_env_logger = "0.5.0"
log = "0.4"
serde = "1.0.216"
serde_yaml = "0.9.34"

